--- a/app/views/shared/_plans_dialog.html.erb
+++ b/app/views/shared/_plans_dialog.html.erb
@@ -20,8 +20,8 @@
         <li class="price">US$ <span class="limited">2</span>/<%= t('datetime.prompts.month') %></li>
       </ul>
     </div>
-    <div id='saddhu' class="plan disabled">
-      <h2>Saddhu</h2>
+    <div id='pro' class="plan disabled">
+      <h2>Pro</h2>
       <ul>
         <li><%= t('shared.plans_dialog.unlimited_private_practices').html_safe %></li>
         <li><%= t('shared.plans_dialog.unlimited_shared_practices').html_safe %></li>
