change 'yôgin' plan to 'lite'

--- a/app/views/shared/_plans_dialog.html.erb
+++ b/app/views/shared/_plans_dialog.html.erb
@@ -10,8 +10,8 @@
         <li class="price"><%= t('shared.plans_dialog.free') %></li>
       </ul>
     </div>
-    <div id='yogin' class="plan recommended">
-      <h2>Yôgin</h2>
+    <div id='lite' class="plan recommended">
+      <h2>Lite</h2>
       <ul>
         <li><%= t('shared.plans_dialog.unlimited_private_practices').html_safe %></li>
         <li><%= t('shared.plans_dialog.unlimited_shared_practices').html_safe %></li>
