auto size on technique preview

--- a/app/views/techniques/_techniques_list.html.erb
+++ b/app/views/techniques/_techniques_list.html.erb
@@ -35,7 +35,9 @@
 <%= javascript_tag do %>
   $('#technique_dialog').dialog({
     autoOpen: false,
-    modal: true
+    modal: true,
+    width: 'auto',
+    height: 'auto'
   });
 <% end %>
 <% end %>
