--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,8 +57,8 @@
         <% unless user_signed_in? %>
           <%= select :user, :locale, I18n.backend.available_locales.collect {|l| [I18n.t('this_file_language', :locale => l), l.to_s]}, {:selected => I18n.locale.to_s} %>
           <%= javascript_tag do %>
-            $('#user_locale').selectmenu({width: 100});
-            if(!$.browser.mozilla) {
+            $('#user_locale').selectmenu({style:'dropdown', width: 100});
+            if(!$.browser.mozilla && !$.browser.msie) {
               $('.ui-selectmenu').height(29);
               $('.ui-selectmenu-status').css('line-height', '1.5em');
             }
