dialog form validations

--- a/app/views/practice_events/_fields.html.erb
+++ b/app/views/practice_events/_fields.html.erb
@@ -20,7 +20,7 @@
   </div>
 <% end %>
 <div class="field">
-  <%= f.label :date %><%= field_help t('practice_event.help.start') %>
+  <%= f.label :start %><%= field_help t('practice_event.help.start') %>
   <br />
   <span class="ui-icon ui-icon-calendar"></span><%= f.text_field :start_string %>
 </div>
