--- a/app/views/shared/_edit_profile_dialog.html.erb
+++ b/app/views/shared/_edit_profile_dialog.html.erb
@@ -27,5 +27,5 @@
       }
     }
   });
-  $('#ui-tab-dialog-close').append($('#edit_profile_dialog').siblings('.ui-dialog-titlebar').children('.ui-dialog-titlebar-close'));
+  $('#edit_profile_dialog #ui-tab-dialog-close').append($('#edit_profile_dialog').siblings('.ui-dialog-titlebar').children('.ui-dialog-titlebar-close'));
 <% end %>
